fix reading time for light theme for better contrast

--- a/src/_includes/assets/css/variables.css
+++ b/src/_includes/assets/css/variables.css
@@ -27,7 +27,7 @@
 
   --visited-link-color: #0c9c38;
 
-  --reading-time-color: #800080;
+  --reading-time-color: #BC0101;
 }
 
 :root[data-theme='dark'] {
